# Avalon

./: .avalon.db  .avalon_fs.json.example  .env.example  .gitattributes  .gitignore  Avalon_v0.2.0-pre-gui.avalon.db  Avalon_v0.2.0-pre-gui.manifest.md  Cargo.toml  INSTALL.md  LICENSE  MigrateClaudeData.ps1  README.md  StartAvalonDesktop.vbs  check_depth.js  electron.js  install.ps1  launch.py  requirements.txt  run.bat  run.sh  tree.txt
.claude/: settings.local.json
Docs/: ARCHITECTURE_SPEC.md  Avalon-Tree.md  CAPABILITIES.md  CHANGELOG.md  CONTINGENCY.md  INSTALL.md  README.md  SECURITY_PROTOCOL.md
client/: README.md  main.js  package-lock.json  package.json  preload.js  test_stopbackend.js
client/api/: ApiService.js
client/contracts/: InferenceContract.js
client/ui/: app.js  index.html  style.css
src/: agent_workers.rs  agents.rs  audit.rs  auth.rs  db.rs  embeddings.rs  fs.rs  main.rs  mindmap.rs  vault.rs  vision.rs
src/tools/: board_post_tool.rs  board_read_tool.rs  config_tool.rs  dispatch_agent_tool.rs  fetch_tool.rs  fs_tools.rs  mindmap_tool.rs  mod.rs  remote_mindmap_tool.rs  transcribe_tool.rs  vault_detect_contradiction_tool.rs  vault_extract_concepts_tool.rs  vault_ingest_tool.rs  vault_link_tool.rs  vault_read_notifications_tool.rs  vault_read_tool.rs  vault_search_tool.rs  video_tool.rs  vision_read_tool.rs  vision_search_tool.rs  web_scrape_tool.rs
