[package]
name = "avalon_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
actix-cors = "0.7"
futures-util = "0.3"
regex = "1"
zip = "2"
base64 = "0.22"
lopdf = "0.34"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }